# example-fastapi-todo-app

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
tests/: conftest.py  test_example.py
tests/clients/http/schemas/: todo.json
tests/clients/http/todo/: __init__.py
tests/clients/http/todo/apis/: todos_api.py
tests/clients/http/todo/models/: api_models.py
tests/utils/: httpx_client.py
tests/utils/templates/: http-request.html  http-response.html
