[project]
name = "example-fastapi-todo-app"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ruff (>=0.15.4,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faker (>=40.23.0,<41.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "restcodegen (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
